# dpgo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: roptlib.cmake
code/C++/: CMakeLists.txt
code/C++/DPGO/: CMakeLists.txt
code/C++/DPGO/cmake/: DPGOConfig.cmake.in
code/C++/DPGO/examples/: ChordalInitializationExample.cpp  DistributedExample.cpp  DistributedExample2.cpp  DistributedSimulation.cpp  MultiRobotExample.cpp  MultithreadExample.cpp  SingleRobotExample.cpp
code/C++/DPGO/include/: DPGO_robust.h  DPGO_types.h  DPGO_utils.h  QuadraticOptimizer.h  QuadraticProblem.h  RelativeSEMeasurement.h
code/C++/DPGO/include/DPGO/: DPGO_robust.h  DPGO_types.h  DPGO_utils.h  PGOAgent.h  PGOLogger.h  QuadraticOptimizer.h  QuadraticProblem.h  RelativeSEMeasurement.h
code/C++/DPGO/include/DPGO/manifold/: LiftedSEManifold.h  LiftedSEVariable.h  LiftedSEVector.h
code/C++/DPGO/include/DPGO/multithread/: RGDMaster.h  RGDWorker.h
code/C++/DPGO/include/distributed/: PGOAgent.h
code/C++/DPGO/include/manifold/: LiftedSEManifold.h  LiftedSEVariable.h  LiftedSEVector.h
code/C++/DPGO/include/multithread/: RGDMaster.h  RGDWorker.h
code/C++/DPGO/src/: DPGO_robust.cpp  DPGO_utils.cpp  PGOAgent.cpp  PGOLogger.cpp  QuadraticOptimizer.cpp  QuadraticProblem.cpp
code/C++/DPGO/src/distributed/: PGOAgent.cpp
code/C++/DPGO/src/examples/: DistributedExample.cpp  DistributedExample2.cpp
code/C++/DPGO/src/manifold/: LiftedSEManifold.cpp  LiftedSEVariable.cpp  LiftedSEVector.cpp
code/C++/DPGO/src/multithread/: RGDMaster.cpp  RGDWorker.cpp  example.cpp
code/C++/DPGO/tests/: testConstruction.cpp  testEigenMap.cpp  testLineGraph.cpp  testOptimizationThread.cpp  testTriangleGraph.cpp  testUtils.cpp
code/C++/ROPTLIB/: CMakeLists.txt
code/C++/ROPTLIB/Solvers/: RTRNewton.h  SolversTR.cpp  SolversTR.h
code/C++/ROPTLIB/cmake/: roptlibConfig.cmake.in
code/C++/SE-Sync/: CMakeLists.txt
code/C++/SE-Sync/examples/: main.cpp
code/C++/SE-Sync/include/: CartanSyncManifold.h  CartanSyncProblem.h  CartanSyncVariable.h  CartanSyncVector.h  SESync.h  SESyncProblem.h  SESync_types.h  SESync_utils.h  StiefelSyncProblem.h
code/C++/SE-Sync/src/: CartanSync.cpp  CartanSyncManifold.cpp  CartanSyncProblem.cpp  CartanSyncVariable.cpp  CartanSyncVector.cpp  SESync.cpp  SESync_utils.cpp  StiefelSyncProblem.cpp
code/C++/asynchPGO/: CMakeLists.txt
code/C++/asynchPGO/include/: QuadraticProblem.h
code/C++/asynchPGO/include/multithread/: RGDMaster.h  RGDWorker.h
code/C++/asynchPGO/src/: QuadraticProblem.cpp
code/C++/asynchPGO/src/multithread/: RGDMaster.cpp  RGDWorker.cpp  example.cpp
code/results/distributed_pgo_test/: plot_pose.m  trajectory.txt
code/results/multithread_convergence_smallGrid3D/: iteration_speedup_smallGrid3D.eps  multithread1.csv  multithread2.csv  multithread4.csv  multithread6.csv  multithread8.csv  multithread_convergence_smallGrid3D.eps
data/: CSAIL.g2o  kitti_00.g2o
examples/: ChordalInitializationExample.cpp  MultiRobotExample.cpp  SingleRobotExample.cpp  SingleRobotGNCExample.cpp
include/DPGO/: DPGO_robust.h  DPGO_solver.h  DPGO_types.h  DPGO_utils.h  PGOAgent.h  PGOLogger.h  PoseGraph.h  QuadraticOptimizer.h  QuadraticProblem.h  RelativeSEMeasurement.h
include/DPGO/manifold/: LiftedSEManifold.h  LiftedSEVariable.h  LiftedSEVector.h  Poses.h
src/: DPGO_robust.cpp  DPGO_solver.cpp  DPGO_utils.cpp  PGOAgent.cpp  PGOLogger.cpp  PoseGraph.cpp  QuadraticOptimizer.cpp  QuadraticProblem.cpp
src/manifold/: LiftedSEManifold.cpp  LiftedSEVariable.cpp  LiftedSEVector.cpp  Poses.cpp
tests/: testConstruction.cpp  testLineGraph.cpp  testOptimizationThread.cpp  testPGO.cpp  testPoses.cpp  testTriangleGraph.cpp  testUtils.cpp
