<?xml version="1.0"?>
<package format="2">
  <name>dpgo</name>
  <version>0.0.1</version>
  <description>DPGO</description>

  <maintainer email="yulun@mit.edu">Yulun Tian</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <!-- Specify that this is not really a catkin package-->
    <build_type>cmake</build_type>
  </export>
</package>